[package]
name = "infinity-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
byteorder = "1.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.82"
bytes = "1.6.0"
tracing = "0.1.40"
thiserror = "1.0.60"
futures = "0.3.30"